testdata/enforcement/demo-policy-with-params.binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "demo-policy-with-params.policycreation.example.com"
spec:
  policyName: "demo-policy-with-params.policycreation.example.com"
  validationActions: [Deny]
  paramRef:
    name: "demo-params.policycreation.example.com"
    namespace: "default"
    parameterNotFoundAction: Allow
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: environment
        operator: In
        values:
        - default
