testdata/enforcement/demo-policy-with-params.policy.yaml
# This policy enforces that all containers of a deployment has the image repo match the environment label of its namespace.
# Except for "exempt" deployments, or any containers that do not belong to the "example.com" organization (e.g. common sidecars).
# For example, if the namespace has a label of {"environment": "staging"}, all container images must be either staging.example.com/*
# or do not contain "example.com" at all, unless the deployment has {"exempt": "true"} label.
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: "demo-policy-with-params.policycreation.example.com"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: "policycreation.example.com/v1"
  matchConstraints:
    resourceRules:
    - apiGroups:   ["policycreation.example.com"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["objects"]
  variables:
  - name: environment
    expression: "'environment' in namespaceObject.metadata.labels ? namespaceObject.metadata.labels['environment'] : ''"
  - name: exempt
    expression: "'exempt' in object.metadata.labels && object.metadata.labels['exempt'] == 'true'"
  - name: environmentAllowed
    expression: "variables.exempt || variables.environment == params.allowedEnvironment"
  validations:
  - expression: "variables.environmentAllowed"
    messageExpression: "'only ' + variables.environment + ' images are allowed in namespace ' + namespaceObject.metadata.name"
