testdata/enforcement/params.crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: params.policycreation.example.com
spec:
  group: policycreation.example.com
  versions:
  - name: v1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            properties:
              allowedEnvironment:
                type: string
              maxReplicas:
                type: integer
  scope: Namespaced
  names:
    # plural name to be used in the URL: /apis/<group>/<version>/<plural>
    plural: params
    # singular name to be used as an alias on the CLI and for display
    singular: param
    # kind is normally the CamelCased singular type. Your resource manifests use this.
    kind: Param
